--- a/css/estiloIndex.css
+++ b/css/estiloIndex.css
@@ -47,3 +47,15 @@ body{
   background-color: #ffffff;
   color: black;
 }
+
+/*
+ * Filter
+ */
+.dataTables_filter {
+	float: left: ;
+	text-align: left;
+	color: gray;
+
+}
+
+
